# kaggle-template

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: 01-train.py
src/conf/: infer.yaml  train.yaml  type.py
src/conf/dir/: dir.yaml
src/conf/model/: Hoge.yaml
src/utils/: utils.py
