[project]
name = "kaggle-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.1",
    "polars==0.20.31",
    "pyarrow==16.1.0",
    "scikit-learn==1.2.0",
    "imbalanced-learn==0.12.3",
    "h5py==3.11.0",

    # GBDT
    "lightgbm==4.2.0",
    "xgboost==2.0.3",
    "catboost==1.2.5",
    "optuna==3.6.1",

    # deep
    "torch==2.1.2",
    "torchmetrics==1.3.2",
    "torchvision==0.16.2",
    "torcheval==0.0.7",

    # CV
    "opencv-python==4.10.0.84",
    "timm==0.9.16",
    "albumentations==1.4.0",

    # exp
    # "wandb==0.12.9",
    "hydra-core==1.3.0",

    # jupyter
    "jupyterlab==4.2.1",
    "traitlets==5.9.0",
    "notebook==6.5.4",
    "matplotlib==3.7.5",
]
